Added navigation menu

--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
         <h3>Help with IT development - Compassion Suisse</h3>
         <p><strong>Yverdons-les-Bains</strong> | <em>Mars 2024 - July 2024</em></p>
         <ul>
-            <li> 80% IT development : Creation and modification of various IT infrastructure tools (Web, systeme, ERP, etc.).</li>
-            <li> 20% Miscellaneous : Updating the database, entering donations, mail, reports, help at conferences, meetings, etc.</li>
+            <li>80% IT development : Creation and modification of various IT infrastructure tools (Web, systeme, ERP, etc.).</li>
+            <li>20% Miscellaneous : Updating the database, entering donations, mail, reports, help at conferences, meetings, etc.</li>
         </ul>
 
         <h3>Web content manager (volunteer) - Institut du leadership</h3>
@@ -104,7 +104,7 @@
         <h2>Education</h2>
         <h3>Bachelor's degree in computer hardware - HEPIA</h3>
         <p><strong>Geneva</strong> | <em>September 2018 - September 2022</em></p>
-        <p>Hardware and mobile programming. Digital processing on a computer system. FPGA programming.</p>
+        <p>Hardware and mobile programming. Digital processing on a computer system. FPGA programming. Basic Software developpement.</p>
     </div>
 
     <div id="skills" class="section">
