Added FontAwesome icons

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title>Diego Cruz Pastor - CV</title>
     <style>
         body {
@@ -109,12 +110,12 @@
     </div>
 
     <div id="summary" class="section">
-        <h2>Summary</h2>
+        <h2><i class="fas fa-user"></i> Summary</h2>
         <p>Experienced in web content managment and IT developpement with a strong background in Hardware IT. Skilled in IT in general and learning cybersecurity. Looking to leverage my expertise in AI developpement at SwissAI.</p>
     </div>
 
     <div id="experience" class="section">
-        <h2>Experience</h2>
+        <h2><i class="fas fa-briefcase"></i> Experience</h2>
         <h3>Help with IT development - Compassion Suisse</h3>
         <p><strong>Yverdons-les-Bains</strong> | <em>Mars 2024 - July 2024</em></p>
         <ul>
@@ -132,14 +133,14 @@
     </div>
 
     <div id="education" class="section">
-        <h2>Education</h2>
+        <h2><i class="fas fa-graduation-cap"></i> Education</h2>
         <h3>Bachelor's degree in computer hardware - HEPIA</h3>
         <p><strong>Geneva</strong> | <em>September 2018 - September 2022</em></p>
         <p>Hardware and mobile programming. Digital processing on a computer system. FPGA programming. Basic Software developpement.</p>
     </div>
 
     <div id="skills" class="section">
-        <h2>Skills</h2>
+        <h2><i class="fas fa-tools"></i> Skills</h2>
         <ul>
             <li>Multilingual: French, English, Spanish</li>
             <li>Open-mindedness</li>
@@ -153,7 +154,7 @@
     </div>
 
     <div id="contact" class="section">
-        <h2>Contact Me</h2>
+        <h2><i class="fas fa-envelope"></i> Contact Me</h2>
         <form action="https://formspree.io/f/myzgnlav" method="POST">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required>
