--- a/index.html
+++ b/index.html
@@ -86,6 +86,13 @@
         form button:hover {
             background-color: #575757;
         }
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
+        h2 {
+            animation: fadeIn 2s ease-in-out;
+        }
     </style>
 </head>
 <body>
