Added background colors and gradients to sections

--- a/index.html
+++ b/index.html
@@ -93,6 +93,35 @@
         h2 {
             animation: fadeIn 2s ease-in-out;
         }
+        #experience {
+            background: linear-gradient(to right, #43cea2, #185a9d); /* Green to blue gradient */
+            padding: 20px;
+            border-radius: 8px;
+        }
+        #summary {
+            background: linear-gradient(to right, #ff7e5f, #feb47b); /* Orange to pink gradient */
+            padding: 20px;
+            border-radius: 8px;
+        }
+        #education {
+            background: linear-gradient(to right, #ff9a9e, #fad0c4); /* Pink to peach gradient */
+            padding: 20px;
+            border-radius: 8px;
+        }
+        #skills {
+            background: linear-gradient(to right, #000428, #004e92); /* Dark blue gradient */
+            color: white; /* White text color */
+            padding: 20px;
+            border-radius: 8px;
+        }
+        #contact {
+            background-color: #ffe6f7; /* Light pink */
+            padding: 20px;
+            border-radius: 8px;
+        }
+        #summary, #experience, #education, #skills, #contact {
+            color: #333; /* Dark gray text color */
+        }
     </style>
 </head>
 <body>
