Added background colors and gradients to sections 2

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             padding: 20px;
             border-radius: 8px;
         }
-        #summary, #experience, #education, #skills, #contact {
+        #summary, #experience, #education, #contact {
             color: #333; /* Dark gray text color */
         }
     </style>
