Added hover effects to navigation links

--- a/index.html
+++ b/index.html
@@ -48,12 +48,14 @@
         nav ul li a {
             color: white;
             text-decoration: none;
-            padding: 8px 16px;
+            padding: 10px 20px;
             display: block;
+            transition: background-color 0.3s ease, color 0.3s ease; /* Smooth transition for hover effects */
         }
         nav ul li a:hover {
-            background-color: #575757;
-            border-radius: 4px;
+            background-color: #ff7e5f; /* Background color on hover */
+            color: white; /* Keep text color white on hover */
+            border-radius: 4px; /* Rounded corners on hover */
         }
         form {
             max-width: 600px;
