--- a/index.html
+++ b/index.html
@@ -78,15 +78,17 @@
             border-radius: 4px;
         }
         form button {
-            background-color: #333;
-            color: white;
+            background-color: #333; /* Initial background color */
+            color: white; /* Initial text color */
             padding: 10px 20px;
             border: none;
             border-radius: 4px;
             cursor: pointer;
+            transition: background-color 0.3s ease, color 0.3s ease; /* Smooth transition for hover effects */
         }
         form button:hover {
-            background-color: #575757;
+            background-color: #feb47b; /* Background color on hover */
+            color: #333; /* Darker text color on hover */
         }
         @keyframes fadeIn {
             from { opacity: 0; }
