--- a/index.html
+++ b/index.html
@@ -4,15 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <title>Diego Cruz Pastor - CV</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            margin: 40px;
-            line-height: 1.6;
+            font-family: 'Roboto', sans-serif;
         }
         h1, h2, h3 {
-            color: #333;
+            font-family: 'Roboto', sans-serif;
+            font-weight: 700; /* Bold for headers */
+        }
+        h1 {
+            font-size: 2.5em; /* Larger size for main headers */
+        }
+        h2 {
+            font-size: 2em; /* Slightly smaller for subheaders */
+        }
+        p, li, a {
+            font-family: 'Roboto', sans-serif;
+            font-weight: 400; /* Regular weight for body text */
+            font-size: 1em; /* Standard size for body text */
         }
         .header, .section {
             margin-bottom: 20px;
