Added footer with social media links 2

--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
     </div>
     
     <footer>
-        <p>&copy; 2024 iego Cruz Pastor. All rights reserved.</p>
+        <p>&copy; 2024 Diego Cruz Pastor. All rights reserved.</p>
         <div class="footer-links">
             <a href="https://github.com/minedcp" target="_blank"><i class="fab fa-github"></i> GitHub</a>
             <a href="https://www.linkedin.com/in/diego-cruz-pastor-41ba6b210" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
