--- a/index.html
+++ b/index.html
@@ -95,16 +95,34 @@
             border: none;
             border-radius: 4px;
             cursor: pointer;
-            transition: background-color 0.3s ease, color 0.3s ease; /* Smooth transition for hover effects */
+            transition: transform 0.3s ease, background-color 0.3s ease;
         }
         form button:hover {
             background-color: #feb47b; /* Background color on hover */
             color: #333; /* Darker text color on hover */
+            transform: scale(1.05); /* Slightly enlarge the button on hover */
         }
         @keyframes fadeIn {
             from { opacity: 0; }
             to { opacity: 1; }
         }
+
+        @keyframes fadeInUp {
+            from {
+                opacity: 0;
+                transform: translateY(20px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        .scroll-animation {
+            opacity: 0; /* Start invisible */
+            animation: fadeInUp 1s ease-out forwards; /* Apply the animation */
+        }
+
         h2 {
             animation: fadeIn 2s ease-in-out;
         }
@@ -216,9 +234,11 @@
             margin: 0 10px;
             text-decoration: none;
             font-size: 1em;
+            transition: color 0.3s ease; /* Smooth color transition */
         }
 
         .footer-links a:hover {
+            color: #feb47b;
             text-decoration: underline;
         }
 
@@ -258,12 +278,12 @@
         </div>
     </div>
 
-    <div id="summary" class="section">
+    <div id="summary" class="section scroll-animation">
         <h2><i class="fas fa-user"></i> Summary</h2>
         <p>Experienced in web content managment and IT developpement with a strong background in Hardware IT. Skilled in IT in general and learning cybersecurity. Looking to leverage my expertise in AI developpement at SwissAI.</p>
     </div>
 
-    <div id="experience" class="section">
+    <div id="experience" class="section scroll-animation">
         <h2><i class="fas fa-briefcase"></i> Experience</h2>
         <h3>Help with IT development - Compassion Suisse</h3>
         <p><strong>Yverdons-les-Bains</strong> | <em>Mars 2024 - July 2024</em></p>
@@ -281,7 +301,7 @@
         </ul>
     </div>
 
-    <div id="education" class="section">
+    <div id="education" class="section scroll-animation">
         <h2><i class="fas fa-graduation-cap"></i> Education</h2>
         <h3>Bachelor's degree in computer hardware - HEPIA</h3>
         <p><strong>Geneva</strong> | <em>September 2018 - September 2022</em></p>
@@ -325,6 +345,23 @@
             <a href="https://www.linkedin.com/in/diego-cruz-pastor-41ba6b210" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
             <a href="#top"><i class="fas fa-arrow-up"></i> Back to Top</a>
         </div>
-    </footer>    
+    </footer>
+
+    <script>
+        // Function to add 'visible' class when section is in viewport
+        function handleScroll() {
+            const elements = document.querySelectorAll('.scroll-animation');
+            elements.forEach((element) => {
+                const rect = element.getBoundingClientRect();
+                if (rect.top <= window.innerHeight && rect.bottom >= 0) {
+                    element.style.opacity = 1;
+                }
+            });
+        }
+    
+        // Run the function when the page is loaded and when it's scrolled
+        window.addEventListener('scroll', handleScroll);
+        window.addEventListener('load', handleScroll);
+    </script>
 </body>
 </html>
