--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
         }
 
         footer {
-            background: url('./backgourndfootertest.png') no-repeat center center;
+            background: url('./img/backgourndfootertest.png') no-repeat center center;
             background-size: cover; /* Ensure the image covers the entire footer */
             color: white;
             text-align: center;
